# bencher

./: .codiumai.toml  .gitattributes  .gitignore  .pre-commit-config-unused.yaml  .pre-commit-config.yaml  .pre-commit-config_unused.yaml  .pre-commit-hooks.yaml  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CODEOWNERS  LICENSE  MANIFEST.in  README.md  bencher.deps.yaml  codecov.yaml  codespell-ignore.txt  conda-environment.yml  dat.rrd  dat1.rrd  dependencies.yaml  deps.yaml  flask_server.py  index.html  package.xml  publish_orphan.sh  pyproject.toml  python_template.deps.yaml  requirements.txt  rockerc.yaml  ruff.toml  setup.cfg  setup.py  todo.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  changelog-config.yml  dependabot.yml  release-drafter.yml
.github/workflows/: black.yml  changelog.yml  ci.yml  deploy.yml  mypy.yml  pre-commit.yaml  publish.yml  python-app.yml  release-drafter.yml  update-changelog.yml
bench_results/: benchmarking_example_categorical1D.html
bencher/: __init__.py  bench_cfg.py  bench_plot_server.py  bench_report.py  bench_runner.py  bench_vars.py  bencher.py  caching.py  class_enum.py  dimension_grid.py  flask_server.py  job.py  optuna_conversions.py  plot_library.py  plot_signature.py  plotting_functions.py  plt_cfg.py  requirements.txt  rerun_utils.py  updates.py  utils.py  utils_rerun.py  video_writer.py  worker.py  worker_job.py
bencher/example/: benchmark_data.py  benchmarking_example_float1D.html  example_all.py  example_bokeh_plotly.py  example_categorical.py  example_composable_container.py  example_composable_container2.py  example_composable_container_image.py  example_composable_container_video.py  example_consts.py  example_custom_sweep.py  example_custom_sweep2.py  example_dataframe.py  example_docs.py  example_float2D_scatter.py  example_float3D.py  example_float3D_cone.py  example_float_cat.py  example_float_grouped.py  example_floats.py  example_floats2D.py  example_func.py  example_function.py  example_gui.py  example_gym.py  example_holosweep.py  example_holosweep2d.py  example_holosweep_cache.py  example_holosweep_objects.py  example_holosweep_tap.py  example_hvplot_explorer.py  example_image.py  example_image1.py  example_interactive.py  example_kwargs.py  example_levels.py  example_levels2.py  example_meta.py  example_meta_cat.py  example_meta_floats.py  (+31 more)
bencher/example/0D/: example_0D.py
bencher/example/1D/: example_simple_float.py
bencher/example/experimental/: bug_heatmap_stream.py  compare_version.py  constrained_plotter.py  dask.py  ex_callback2.py  ex_slider_hmap.py  example_anim_raw.py  example_animation.py  example_animation2copy.py  example_dask.py  example_hvplot_explorer.py  example_limts.py  example_mermaid.md  example_mermaid.py  example_periodic_cb.py  example_plugin.py  example_pyvista.py  example_rejection.py  example_scoop.py  example_slopes.py  example_streams.py  example_vector.py  gpt_anim.py  hover_ex.py  streamnd.py  updates.py
bencher/example/html/: benchmarking_example_categorical1D.html  benchmarking_example_float1D.html
bencher/example/inputs_0D/: example_0D.py  example_0D_func.py  example_0_in_1_out.py  example_0_in_1_out_func.py  example_0_in_2_out.py
bencher/example/inputs_1D/: 1_in_2_out.py  example1d_common.py  example_1D.py  example_1_in_1_out.py  example_1_in_2_out.py  example_1_in_2_out_repeats.py  example_spread.py
bencher/example/meta/: example_meta.py  example_meta1.py  example_meta3.py  example_meta_cat.py  example_meta_float.py  example_meta_levels.py  example_meta_scatter.py  (+2 more)
bencher/plots/: catplot.py  cone.py  line.py  plot_collection.py  plot_library.py  plot_libs.py  relplot.py  scatter2D.py  scatter3D.py  surface.py  swarm.py  tables.py  volume.py
bencher/plotting/: animate.py  plot_collection.py  plot_filter.py  plot_input.py  plot_library.py  plot_types.py  plt_cnt_cfg.py
bencher/plugins/: __init__.py  plugin_a.py  plugin_b.py
bencher/results/: bench_result.py  bench_result_base.py  dataset_result.py  float_formatter.py  gridspec_ex.py  holoview_result.py  hvplot_result.py  laxtex_result.py  md_ex.py  mermaid_result.py  optuna_result.py  panel_result.py  plotly_result.py  printing.py  result_plotly.py  seaborn_result.py  video_result.py  video_summary.py  vtk_result.py
bencher/variables/: inputs.py  inputs2.py  parametrised_sweep.py  results.py  sweep_base.py  time.py
docs/: bencher.rst  conda-environment.yml  conf.py  gallery.rst  index.md  index.rst  intro.md  intro.rst  requirements.txt
docs/_static/: custom.css
docs/examples/: example1.ipynb  index.md
docs/reference/: index.rst
docs/source/: conf.py  index.rst
example/: example.py
examples/basic_examples/: plot_example.ipynb
plots/: catplot.py  cone.py  relplot.py
python_template/: basic_class.py
scripts/: Dockerfile  clean_pixi.sh  code-remote-container.sh  dispycos_mem_server.py  first_time_setup.sh  gen_dependencies_yaml.py  gen_hash_bench_cfg.py  gen_hash_sweep.py  install_pixi.sh  launch_vscode.sh  rename_project.sh  run_dispynode.sh  run_docker_dispynode.sh  setup_host.sh  sub-commit.sh  sub-update-branch.sh  update_from_template.sh  update_from_template_ours.sh
src/bencher/: bench_runner.py  bencher.py
test/: basic_param.py  run_dispy.py  run_dispy_setup.py  test_basic.py  test_bch_p.py  test_bench_cfg.py  test_bench_examples.py  test_bench_report.py  test_bench_result_base.py  test_bench_runner.py  test_bencher.py  test_cache.py  test_class_enum.py  test_combinations.py  test_composable_container_base.py  test_composable_container_video.py  test_const_defaults.py  test_dataset.py  test_dimension_grid.py  test_diskcache.py  test_float_formatter.py  test_inputs.py  test_job.py  test_latex_result.py  test_meta_tests.py  test_parametrized_sweep.py  test_plot_collection.py  test_plot_filter.py  test_plot_library.py  test_plot_server.py  test_plot_signatures.py  test_report.py  test_sample_cache.py  test_sweep_base.py  test_sweep_vars.py  test_utils.py  test_vars.py  test_video_writer.py
test/plots/: test_catplot.py  test_plots_common.py  test_tables.py
(+220 files in other folders)
