<?xml version="1.0"?>
<package format="3">
  <name>bencher</name>
  <version>0.1.0</version>
  <description>A package for benchmarking the performance of arbitrary functions</description>
  <maintainer email="austin.gregg-smith@dyson.com">Austin Gregg-Smith</maintainer>
  <license>MIT</license>

  <depend>python3-diskcache</depend>  
  
  <depend>python3-pandas</depend>  
  <depend>python3-seaborn</depend>
  <depend>python3-matplotlib</depend>
  <depend>python3-numpy</depend>
  <depend>python3-pytest</depend>
  <depend>python3-hypothesis</depend>
  <depend>xarray</depend>  
  <depend>python3-zarr</depend>    
  <depend>python3-param</depend>
  <depend>python3-panel</depend>
  <depend>python3-hvplot</depend>
  <depend>python3-optuna</depend> 
  <depend>python3-plotly</depend> 

  <!-- TO REMOVE WHEN WE UPGRADE TO PYTHON 3.11, This is in the standard library for python>=3.11 -->
  <depend>strenum</depend>

  <test_depend>python3-pytest-cov</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
