[project]
name = "holobench"
version = "1.39.0"

authors = [{ name = "Austin Gregg-Smith", email = "blooop@gmail.com" }]
description = "A package for benchmarking the performance of arbitrary functions"
readme = "README.md"
license = "MIT"

requires-python = ">=3.10,<3.13"

dependencies = [
    "holoviews>=1.15,<=1.20.0",
    "numpy>=1.0,<=2.2.1",
    "param>=1.13.0,<=2.2.0",
    "hvplot>=0.8,<=0.10.0",        #greater versions cause an error
    "matplotlib>=3.6.3,<=3.10.0",
    "panel>=1.3.6,<=1.5.5",
    "diskcache>=5.6,<=5.6.3",
    "optuna>=3.2,<=4.1.0",
    "xarray>=2023.7,<=2024.11.0",
    "plotly>=5.15,<=5.24.1",
    "sortedcontainers>=2.4,<=2.4",
    "pandas>=2.0,<=2.2.3",
    "strenum>=0.4.0,<=0.4.15",
    "scikit-learn>=1.2,<=1.6.0",
    "str2bool>=1.1,<=1.1",
    "scoop>=0.7.0,<=0.7.2.0",
    "moviepy-fix-codec",
]

[project.urls]
Repository = "https://github.com/dyson-ai/bencher"
Home = "https://github.com/dyson-ai/bencher"
Documentation = "https://bencher.readthedocs.io/en/latest/"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.system-requirements]
libc = "2.31"

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"
[tool.pixi.feature.py311.dependencies]
python = "3.11.*"
[tool.pixi.feature.py312.dependencies]
python = "3.12.*"


[tool.pixi.pypi-dependencies]
holobench = { path = ".", editable = true }

# Define a consolidated docs feature with all dependencies
# [tool.pixi.feature.docs.dependencies]
# python = "3.10.*"
# firefox = ">=134.0,<135"         # Conda package
# geckodriver = "*"                # Conda package
# sphinx = "*"
# gtk3 = "*"
# python-chromedriver-binary = "*"

# [tool.pixi.feature.docs.pypi-dependencies]
# # All Python documentation dependencies
# pydata-sphinx-theme = "*"
# sphinx-rtd-theme = "*"
# sphinxcontrib-napoleon = "*"
# sphinx-autoapi = "*"
# nbsite = "==0.8.7"
# jupyter_bokeh = "*"
# selenium = "*"
# chromedriver_binary = "*"
# ipykernel = "*"
# "nbformat",

[project.optional-dependencies]
test = [
    "pylint>=3.2.5,<=3.3.4",
    "pytest-cov>=4.1,<=6.0.0",
    "pytest>=7.4,<=8.3.4",
    "hypothesis>=6.104.2,<=6.124.9",
    "ruff>=0.5.0,<=0.9.4",
    "coverage>=7.5.4,<=7.6.10",
    "pre-commit<=4.1.0",
    "nbformat",
    "ipykernel",
    "pip",
    "jupyter_bokeh",

]


#adds support for embedding rerun windows (alpha)
rerun = ["rerun-sdk==0.21.0", "rerun-notebook", "flask", "flask-cors"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["bencher"]

# Environments
[tool.pixi.environments]
default = { features = ["test", "rerun"], solve-group = "default" }
py310 = ["py310", "test", "rerun"]
py311 = ["py311", "test", "rerun"]
py312 = ["py312", "test", "rerun"]


[tool.pixi.tasks]
pre-commit = "pre-commit run -a"
pre-commit-update = "pre-commit autoupdate"
format = "ruff format ."
check-clean-workspace = "git diff --exit-code"
ruff-lint = "ruff check . --fix"
pylint = "pylint --version && echo 'running pylint...' && pylint $(git ls-files '*.py')"
lint = { depends-on = ["ruff-lint", "pylint"] }
style = { depends-on = ["format", "lint"] }
commit-format = "git commit -a -m'autoformat code' || true"
test = "pytest"
coverage = "coverage run -m pytest && coverage xml -o coverage.xml"
coverage-report = "coverage report -m"
update-lock = "pixi update && git commit -a -m'update pixi.lock' || true"
push = "git push"
update-lock-push = { depends-on = ["update-lock", "push"] }
fix = { depends-on = ["update-lock", "format", "ruff-lint", "pre-commit"] }
fix-commit-push = { depends-on = ["fix", "commit-format", "update-lock-push"] }
ci-no-cover = { depends-on = ["style", "test"] }
ci = { depends-on = [
    "format",
    "ruff-lint",
    "pylint",
    "coverage",
    "coverage-report",
] }
ci-push = { depends-on = ["format", "ruff-lint", "update-lock", "ci", "push"] }
clear-pixi = "rm -rf .pixi pixi.lock"
setup-git-merge-driver = "git config merge.ours.driver true"
update-from-template-repo = "./scripts/update_from_template.sh"

docs = "rm -rf docs/builtdocs; rm -rf docs/jupyter_execute; sphinx-build -b html docs docs/builtdocs"


#demos
demo = "python3 bencher/example/example_image.py"
demo_rerun = "python3 bencher/example/example_rerun.py"


[tool.pylint]
extension-pkg-whitelist = ["numpy", "scipy"]
jobs = 16                                    #detect number of cores
ignore-paths = "docs/*"

[tool.pylint.'MESSAGES CONTROL']
disable = "C,logging-fstring-interpolation,line-too-long,fixme,missing-module-docstring,too-many-instance-attributes,too-few-public-methods,too-many-arguments,too-many-locals,too-many-branches,too-many-statements,use-dict-literal,duplicate-code,too-many-public-methods,too-many-nested-blocks,cyclic-import,too-many-positional-arguments"
enable = "no-else-return,consider-using-in"

[tool.coverage.run]
omit = ["*/test/*", "__init__.py"]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if False:",
    "if 0:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "(_):",
]
